--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,7 +13,7 @@ root: {
       taskId: 2501
       groupName: "vulture"
       image: "docker.registry.clouddev.sogou:5000/vulture/vulture"
-      version: "0.0.1-SNAPSHOT"
+      version: "1.0-SNAPSHOT"
       memory: "1g"
       clusterUgi: "slave,slave"
       emails: "litao"
@@ -28,7 +28,7 @@ root: {
     }
   }
   command: {
-    hdfsCommpress: "bin/ext/hdfs_compress.sh"
+    hdfsCompress: "bin/ext/hdfs_compress.sh"
     hdfsClean: "bin/ext/hdfs_clean.sh"
     hiveClean: "bin/ext/hive_clean.sh"
   }
