Executor support config hadoopUgi.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,8 @@ root: {
       image: "docker.registry.clouddev.sogou:5000/vulture/vulture"
       version: "1.0-SNAPSHOT"
       memory: "1g"
-      clusterUgi: "slave,slave"
+      hdfsUgi: "slave,slave"
+      hiveUgi: "hive,3e85b4930fe2a54f9e9a8a3be7575036"
       emails: "litao"
       noticeType: "ON_FAIL"
       name: "vulture"
