Add statistics before and after execute task.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,5 +32,7 @@ root: {
     hdfsCompress: "bin/ext/hdfs_compress.sh"
     hdfsClean: "bin/ext/hdfs_clean.sh"
     hiveClean: "bin/ext/hive_clean.sh"
+    hdfsStatistics: "bin/ext/hdfs_statistics.sh"
+    hiveStatistics: "bin/ext/hive_statistics.sh"
   }
 }
