Set ConnectionPool config.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,12 @@ root: {
   database: {
     driver: "com.mysql.jdbc.Driver"
     url: "jdbc:mysql://10.134.97.148:3306/vulture_data?user=root&password=rootmysql&useUnicode=true&characterEncoding=utf8&autoReconnect=true"
+    initConnectionNum: 3
+    minConnectionNum: 3
+    maxConnectionNum: 100
+    idleTimeout: 30000
+    idleQueueSize: 100
+    idleConnectionCloseThreadPoolSize: 10
   }
   scheduler: {
     threadNum: 50
